Remove z-index css and fix menus

--- a/public/rcm-page-admin/layout-editor.css
+++ b/public/rcm-page-admin/layout-editor.css
@@ -92,7 +92,7 @@
     left: 0px;
     width: 100%;
     height: 2em;
-    z-index: 20000;
+    /*z-index: 20000;*/
 }
 
 .rcmLayoutEditHelper .rcmHandle {
